# h0032

./: pyproject.toml  self_check.py
examples/: sample_reviews.csv
reviewscan/: analyzer.py  cli.py  reporter.py
reviewscan/templates/: compare_report.html  report.html
